[tool.poetry]
name = "test_schloss"
version = "0.1.0"
description = ""
authors = ["aarnav <aarnavbos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
